[package]
name = "omniroom-camera"
version = "0.1.0"
authors = ["Nabos <nabos@glargh.fr>"]
edition = "2018"

[dependencies]
sse-client = { version = "*" }
reqwest = { version = "*", features = ["json", "blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

gst = { package = "gstreamer", version = "0.18", features = ["v1_20"] }
gst_webrtc = { package = "gstreamer-webrtc", version = "0.18", features = ["v1_20"] }
gst_sdp = { package = "gstreamer-sdp", version = "0.18", features = ["v1_20"] }

