[package]
name = "omniroom-camera"
version = "0.1.0"
authors = ["Nabos <nabos@glargh.fr>"]
edition = "2018"

[dependencies]
reqwest = { path = "reqwest", features = ["json", "blocking", "cookies", "stream"] }
reqwest-eventsource = { path = "reqwest-eventsource" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "1", features = ["full"] }
futures = "0.3.26"
futures-core = "0.3.26"
futures-retry = "0.6"
eventsource-stream = "0.2.0"

gst = { package = "gstreamer", version = "0.20.0", features = ["v1_20"] }
gst_webrtc = { package = "gstreamer-webrtc", version = "0.20", features = ["v1_20"] }
gst_sdp = { package = "gstreamer-sdp", version = "0.20", features = ["v1_20"] }
glib = "0.15.11"
gtk4 = "0.4.8"

clap = { version = "3.1.18", features = ["derive"] }
